deploy/overlays/dev/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: apps
  labels:
    app.kubernetes.io/part-of: goldenpath-idp
    environment: dev
